set(SOURCES
	AbstractConnection.h 
	AbstractServer.h
	AbstractSession.h
	AuthenticationPacket.h
	BeautyDataProvider.h
	BuffDataProvider.h
	ConfigFile.h
	ConnectionManager.h
	Database.h
	DatabaseMigration.h
	DatabaseMigrationRunner.h
	Decoder.h
	DropDataProvider.h
	EquipDataProvider.h
	FileUtilities.h
	GameConstants.h
	GameLogicUtilities.h
	GameObjects.h
	InitializeCommon.h
	InterHeader.h
	IpUtilities.h
	ItemDataProvider.h
	LoopingId.h
	MapleServerClient.h
	MapleEncryption.h
	MapleServer.h
	MapleSession.h
	MapleVersion.h
	MersenneTwister.h
	MiscUtilities.h
	MobDataProvider.h
	PetDataProvider.h
	PacketCreator.h
	PacketReader.h
	PingPacket.h
	Pos.h
	PrecompiledHeader.h
	QuestDataProvider.h
	Randomizer.h
	Rates.h
	ReactorDataProvider.h
	RecvHeader.h
	ScriptDataProvider.h
	SendHeader.h
	ServerConnection.h
	SessionManager.h
	ShopDataProvider.h
	SkillDataProvider.h
	StringUtilities.h
	Timer/Container.h
	Timer/Id.h
	Timer/Thread.h
	Timer/Time.h
	Timer/Timer.h
	Timer/Types.h
	TimeUtilities.h
	Types.h
	ValidCharDataProvider.h
	Variables.h
	AbstractConnection.cpp 
	AbstractServer.cpp
	AuthenticationPacket.cpp
	BeautyDataProvider.cpp
	BuffDataProvider.cpp
	ConfigFile.cpp
	ConnectionManager.cpp
	Database.cpp
	DatabaseMigration.cpp
	DatabaseMigrationRunner.cpp
	Decoder.cpp
	DropDataProvider.cpp
	EquipDataProvider.cpp
	FileUtilities.cpp
	GameObjects.cpp
	InitializeCommon.cpp
	IpUtilities.cpp
	ItemDataProvider.cpp
	MapleServerClient.cpp
	MapleEncryption.cpp
	MapleServer.cpp
	MapleSession.cpp
	MiscUtilities.cpp
	MobDataProvider.cpp
	PacketCreator.cpp
	PacketReader.cpp
	PetDataProvider.cpp
	PingPacket.cpp
	PrecompiledHeader.cpp
	QuestDataProvider.cpp
	Randomizer.cpp
	ReactorDataProvider.cpp
	ScriptDataProvider.cpp
	ServerConnection.cpp
	SessionManager.cpp
	ShopDataProvider.cpp
	SkillDataProvider.cpp
	StringUtilities.cpp
	Timer/Container.cpp
	Timer/Id.cpp
	Timer/Thread.cpp
	Timer/Timer.cpp
	TimeUtilities.cpp
	ValidCharDataProvider.cpp
	Variables.cpp
)

add_library(Common STATIC ${SOURCES})

